--- a/10-CW_SetTests/.classpath
+++ b/10-CW_SetTests/.classpath
@@ -7,8 +7,9 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/10-CW_SetInterface"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/10-CW_HashSet"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/09-HW_IndexedLinkedList"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/10-CW_HashSet"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/10-CW_SetInterface"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/12-HW_TreeSet"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
