19 HW StringBuilder vs String

--- a/18-CW_PrimitivesAndStrings/.classpath
+++ b/18-CW_PrimitivesAndStrings/.classpath
@@ -6,7 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/10-CW_SetInterface"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/17-CW_TreePresentation"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
