--- a/19-HW_IndexedListsTests/.classpath
+++ b/19-HW_IndexedListsTests/.classpath
@@ -6,8 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/08-CW_IndexedListInterface"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/09-HW_IndexedLinkedList"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/08-CW_IndexedListInterface"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/07-HW_Array"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
