--- a/41-HW_WebCalculatorClient/.classpath
+++ b/41-HW_WebCalculatorClient/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/38-CW_TcpJava"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/39-HW_MenuItemsInputOutput"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
