HW #47 Threads race with collecting results

--- a/47-HW_SynchronizedThreadsRace/.project
+++ b/47-HW_SynchronizedThreadsRace/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>47-TrucksElevators</name>
+	<name>47-HW_SynchronizedThreadsRace</name>
 	<comment></comment>
 	<projects>
 	</projects>
