--- a/40-V2-HW_EmployeesClientAppl/.classpath
+++ b/40-V2-HW_EmployeesClientAppl/.classpath
@@ -7,7 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/38-CW_TcpJava"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/39-HW_MenuItemsInputOutput"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/52-CW_TcpJavaThreadsPool"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
